--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "react-dom": "^16.11.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.1.1",
+    "react-scripts": "^3.3.0",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
+    "serialize-javascript": ">=2.1.1",
     "styled-components": "^4.4.1"
   },
   "scripts": {
